Fixed spacings and border

--- a/assets/styles/results.css
+++ b/assets/styles/results.css
@@ -20,7 +20,7 @@
   text-align: center;
   font-family: Verdana, Tahoma, sans-serif;
   font-style: bold;
-  border-radius: 10px;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .front-img {
@@ -50,7 +50,7 @@
   background-color: #eff2f5;
   font-family: Verdana, Tahoma, sans-serif;
   font-size: 12px;
-  border-radius: 10px;
+  border-radius: 0px 0px 10px 10px;
   border-style: groove;
 }
 
@@ -68,4 +68,9 @@
 
 .results {
   margin: auto;
+}
+
+h4 {
+  font-size: medium;
+  padding-bottom: 2rem;
 }
